Version ClaSS-1.0.66 release (2014/04/15)
-------------------------------------------

Option to check students from the fees charge list table.

Added field result in rating table for the equivalent used in markbook tables.

Added functions for skill_log table total by term and by component and cron 
file for scores updates and generate terms assessments.

Added script for sharing old comments.

Skill statements have to be migrated to report_skills_log table 
(run migrate_statements_results();).

Added script for updating school.php file with the new config variables.


Version ClaSS-1.0.65 release (2014/03/20)
-------------------------------------------

Tiny fixes for elgg_send_email, background and entrybook xml import.

Added file uploader for infobook assessments.

The file uploader from infobook/enrolment has the option to share a file
with medical, subject reports and assessments areas. 

New field for report attendance start date, user for report preview.

New field yes/no in report table for photos attachments - addphotos.

Added bar chart for remittances list and navigation by month/year.

Photo picker added for report skills and subject reports.

School bank accounts management added to fees.

New import assessments scores from file.


Version ClaSS-1.0.64 release (2014/02/17)
-------------------------------------------

Teacher photo is shared now with Classic.

Student attendance history has now sheets for every year since he/she started.

Added script to display images from Classis in Classic (only $CFG->eportfoliosite).

Added function to append html to a comment in Classic.

When a shared comment is deleted in Classis it is also deleted from Classic.

If a comment is shared the "Share with parents" area is hidden.

When an image is uploaded for a comment it is appended to a comment if
this is shared.


Version ClaSS-1.0.63 release (2014/02/10)
-------------------------------------------

Added next and previous buttons for navigating contacts.
