@@ -1,6 +1,8 @@
 Version ClaSS-1.0.66 release (2014/04/15)
 -------------------------------------------
 
+Fees tables added to demoiser.
+
 Option to check students from the fees charge list table.
 
 Added field result in rating table for the equivalent used in markbook tables.
